--- a/responsive.css
+++ b/responsive.css
@@ -1,9 +1,39 @@
+
 @media (max-width:800px) {
-    .mission-flex{
+    .flex{
+        width: 90%;
         display: flex;
-      flex-direction: column;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-    .mission-items{
+    .introduction-information{
+        width: 90%;
+        margin: auto;
+    }
+    .introduction-img{
+        width:100%;
+    }
+   
+    .develop-img{
         width: 100%;
     }
+.develop-text{
+    width: 90%;
+    margin-top: 20px;
 }
+.community-text{
+    width: 90%;
+    padding: 10px;
+    margin-right:70px;
+}
+.community-img{
+    width: 90%;
+}
+.mission-items{
+    width: 100%;
+}
+
+}
+
+
